test/Fail/Issue543.err
Issue543.agda:32.10-72: error: [UnequalTerms]
unsquash _ != true of type Bool
when checking that the inferred type of an application
  unsquash _ ≡ unsquash _
matches the expected type
  true ≡ false
